# ai-agent

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  main.rs
src-tauri/src/ai/: cloud.rs  mod.rs  ollama.rs
src-tauri/src/tools/: clipboard.rs  file.rs  mod.rs  shell.rs
src/components/: ChatWindow.tsx  MarkdownContent.tsx  SettingsPanel.tsx  Sidebar.tsx
src/stores/: agentStore.ts  messageStore.ts
src/types/: config.ts
